Init Variables SCSS

--- a/style.css
+++ b/style.css
@@ -2,6 +2,7 @@
 	CASH FOR BACON
 	PSD to HTML Conversion
 	Jordan Pakrosnis
+	11/18/2015
 */
 /*! normalize.css v3.0.2 | MIT License | git.io/normalize */
 /**
@@ -360,5 +361,10 @@ table {
 td,
 th {
   padding: 0; }
+
+/*
+	CASH FOR BACON
+	Variables
+*/
 
 /*# sourceMappingURL=style.css.map */
