Open Sans / Gray Global Font

--- a/style.css
+++ b/style.css
@@ -367,6 +367,8 @@ th {
 	Variables
 */
 body {
-  background: #101010; }
+  background: #101010;
+  font-family: 'Open Sans', sans-serif;
+  color: #5A6468; }
 
 /*# sourceMappingURL=style.css.map */
