Body Center Text

--- a/style.css
+++ b/style.css
@@ -369,6 +369,7 @@ th {
 body {
   background: #101010;
   font-family: 'Open Sans', sans-serif;
-  color: #5A6468; }
+  color: #5A6468;
+  text-align: center; }
 
 /*# sourceMappingURL=style.css.map */
