--- a/sass/style.scss
+++ b/sass/style.scss
@@ -18,4 +18,53 @@ body {
 	text-align: center;
 }
 
+// HEADERS //
+h1, h2, h3, h4 {
+	margin: 0;
+	padding: 0;
+	font-weight: 800;
+	text-transform: uppercase;
+	letter-spacing: -0.08em;
+}
+
+h1 {
+	display: block;
+	font-size: 60px;
+	line-height: 40px;
+	font-weight: 600;
+	font-style: italic;
+	text-align: right;
+	color: $text-red;
+
+	span {
+		font-size: 86px;
+		line-height: 85px;
+		color: $text-gray;
+		font-weight: 800;
+		letter-spacing: -0.06em;
+	}
+
+} // h1
+
+
+// WRAPS //
+.wrap {
+	// background: rgba(0,0,255,0.25);
+	margin: 0 auto;
+	max-width: 964px;
+}
+
+
 // HEADER //
+header {
+	display: block;
+	width: 100%;
+	height: 183px;
+	background-image: url('images/c4b-sprite.png');
+	background-position: bottom;
+
+	.wrap {
+		padding: 32px;
+	}
+
+} // header
