--- a/style.css
+++ b/style.css
@@ -415,4 +415,14 @@ header {
   header .wrap {
     padding: 32px; }
 
+#girl-bacon {
+  display: block;
+  width: 100%;
+  height: 393px;
+  background: #D8E0EC;
+  background: -moz-linear-gradient(top, #B5BCC6 0%, #D8E0EC 13%);
+  background: -webkit-linear-gradient(top, #B5BCC6 0%, #D8E0EC 13%);
+  background: linear-gradient(to bottom, #B5BCC6 0%, #D8E0EC 13%);
+  filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#B5BBC5', endColorstr='#D8E0EC',GradientType=0 ); }
+
 /*# sourceMappingURL=style.css.map */
