--- a/style.css
+++ b/style.css
@@ -425,13 +425,23 @@ header {
   background: -webkit-linear-gradient(top, #B5BCC6 0%, #D8E0EC 13%);
   background: linear-gradient(to bottom, #B5BCC6 0%, #D8E0EC 13%);
   filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#B5BBC5', endColorstr='#D8E0EC',GradientType=0 ); }
+  #girl-bacon .wrap {
+    position: relative; }
+
+#bacon-img {
+  position: absolute;
+  top: 25px;
+  right: 0;
+  width: 684px;
+  height: 354px;
+  background: url("images/c4b-sprite.png") top left no-repeat; }
 
 #girl-img {
-  position: relative;
+  position: absolute;
   top: -172px;
   left: -65px;
   width: 494px;
   height: 596px;
-  background: url("images/c4b-sprite.png") 0 -354px; }
+  background: url("images/c4b-sprite.png") 0 -354px no-repeat; }
 
 /*# sourceMappingURL=style.css.map */
