--- a/sass/style.scss
+++ b/sass/style.scss
@@ -64,7 +64,7 @@ h1 {
 
 
 // WRAPS //
-.wrap {
+.wrap, #main-content-wrap {
 	// background: rgba(0,0,255,0.25);
 	margin: 0 auto;
 	max-width: 964px;
