--- a/style.css
+++ b/style.css
@@ -405,7 +405,7 @@ h1 {
     font-weight: 800;
     letter-spacing: -0.06em; }
 
-.wrap {
+.wrap, #main-content-wrap {
   margin: 0 auto;
   max-width: 964px; }
 
