--- a/sass/_variables.scss
+++ b/sass/_variables.scss
@@ -19,3 +19,7 @@ $bg-gray-darker:	#101010;
 $divider-blue:		#245270;
 $black:				#000000;
 $white:				#FFFFFF;
+
+
+//-- IMAGES --//
+$sprite: url('images/c4b-sprite.png');
