--- a/sass/style.scss
+++ b/sass/style.scss
@@ -75,7 +75,7 @@ h1 {
 header {
 	width: 100%;
 	height: 183px;
-	background-image: url('images/c4b-sprite.png');
+	background-image: $sprite;
 	background-position: bottom;
 
 	.wrap {
@@ -107,7 +107,7 @@ header {
 	right: 0;
 	width: 684px;
 	height: 354px;
-	background: url('images/c4b-sprite.png') top left no-repeat;
+	background: $sprite top left no-repeat;
 }
 
 #girl-img {
@@ -116,5 +116,5 @@ header {
 	left: -65px;
 	width: 494px;
 	height: 596px;
-	background: url('images/c4b-sprite.png') 0 -354px no-repeat;
+	background: $sprite 0 -354px no-repeat;
 }
