Init Main styling - Add new diag bg img var

--- a/sass/_variables.scss
+++ b/sass/_variables.scss
@@ -22,4 +22,5 @@ $white:				#FFFFFF;
 
 
 //-- IMAGES --//
-$sprite: url('images/c4b-sprite.png');
+$sprite: 			url('images/c4b-sprite.png');
+$diag-bg-pattern:	url('images/diag-bg-pattern.png');
