--- a/sass/style.scss
+++ b/sass/style.scss
@@ -23,6 +23,11 @@
 }
 
 div, header, main {
+	box-sizing: border-box;
+	-moz-box-sizing: border-box;
+}
+
+div, header, main {
 	display: block;
 }
 
@@ -133,11 +138,31 @@ header {
 main {
 	position: relative;
 	top: -20px;
+	padding: 12px;
 	background: $diag-bg-pattern;
 	-moz-border-radius: 12px;
 	border-radius: 12px;
 	border: 2px solid $black;
-}
+
+	h2 {
+		font-size: 79px;
+		line-height: 79px;
+		color: $text-red;
+	}
+
+	h3 {
+		font-size: 49px;
+		line-height: 58px;
+		letter-spacing: -3px;
+	}
+
+	h4 {
+		font-size: 30px;
+		line-height: 42px;
+		letter-spacing: -1px;
+	}
+
+} // main
 
 
 //-- CLEARFIX --//
