--- a/sass/_variables.scss
+++ b/sass/_variables.scss
@@ -16,11 +16,11 @@ $bg-gray-dark:		#3D3D3D;
 $bg-gray-darker:	#101010;
 
 // Other
-$divider-blue:		#245270;
 $black:				#000000;
 $white:				#FFFFFF;
 
 
-//-- IMAGES --//
+//-- MISC --//
 $sprite: 			url('images/c4b-sprite.png');
 $diag-bg-pattern:	url('images/diag-bg-pattern.png');
+$divider-blue:		2px solid #245270;
