--- a/sass/style.scss
+++ b/sass/style.scss
@@ -128,6 +128,7 @@ header {
 
 //-- MAIN CONTENT --//
 #main-content-wrap {
+	margin-bottom: 50px;
 	background: $bg-gray-dark;
 	background: -moz-linear-gradient( top, $bg-gray-dark 0%, $bg-gray-darker 100% );
 	background: -webkit-linear-gradient( top, $bg-gray-dark 0%, $bg-gray-darker 100% );
@@ -210,8 +211,10 @@ main {
 
 //-- LOGO & CALL TO ACTION --//
 #logo-cta {
-	@include clearfix();
+	margin-bottom: 5px;
 	text-align: left;
+	
+	@include clearfix();
 }
 
 #logo {
@@ -223,22 +226,37 @@ main {
 }
 
 #call {
+	position: relative;
 	float: left;
 	margin: 6px 0 0 55px;
-	padding: 12px;
+	padding: 8px 20px 8px 110px;
 	background: $white;
 	border: 2px solid $text-red;
 	-moz-border-radius: 12px;
 	border-radius: 12px;
 	-moz-box-shadow: 5px 5px 25px rgba( 0, 0, 0, 0.2 );
 	box-shadow: 5px 5px 25px rgba( 0, 0, 0, 0.2 );
-}
+
+	h3 {
+		font-size: 40px;
+		letter-spacing: -0.02em;
+		line-height: 45px;
+
+		span {
+			font-size: 47px;
+			color: $text-red;
+			letter-spacing: 0.003em;
+		}
+
+	} // h3
+
+} // #call
 
 #phone-img {
 	display: inline-block;
-	position: relative;
-	top: -42px;
-	left: -40px;
+	position: absolute;
+	top: -30px;
+	left: -26px;
 	width: 152px;
 	height: 139px;
 	background: $sprite 0 -1055px no-repeat;
