--- a/style.css
+++ b/style.css
@@ -370,6 +370,35 @@ th {
 	CASH FOR BACON
 	Mixins
 */
+/*
+	CASH FOR BACON
+	Breakpoints
+*/
+@media (min-width: 1920px) {
+  .wrap, .site-inner {
+    background-color: rgba(255, 255, 0, 0.5); } }
+@media (max-width: 1500px) {
+  .wrap, .site-inner {
+    background-color: rgba(255, 0, 0, 0.4); } }
+@media (max-width: 1260px) {
+  .wrap, .site-inner {
+    background-color: rgba(0, 0, 255, 0.4); } }
+@media (max-width: 1080px) {
+  .wrap, .site-inner {
+    background-color: rgba(0, 128, 0, 0.4); } }
+@media (max-width: 1024px) {
+  .wrap, .site-inner {
+    background-color: rgba(128, 0, 128, 0.4); } }
+@media (max-width: 860px) {
+  .wrap, .site-inner {
+    background-color: rgba(255, 0, 0, 0.4); } }
+@media (max-width: 600px) {
+  .wrap, .site-inner {
+    background-color: rgba(0, 0, 255, 0.4); } }
+@media (max-width: 460px) {
+  .wrap, .site-inner {
+    background-color: rgba(0, 128, 0, 0.4); } }
+
 *::selection {
   background: #E63B2C;
   color: #FFFFFF; }
@@ -416,6 +445,18 @@ h1 {
 .wrap, main {
   margin: 0 auto;
   max-width: 964px; }
+  @media (max-width: 1080px) {
+    .wrap, main {
+      max-width: 960px; } }
+  @media (max-width: 1024px) {
+    .wrap, main {
+      max-width: 800px; } }
+  @media (max-width: 860px) {
+    .wrap, main {
+      width: 90%; } }
+  @media (max-width: 600px) {
+    .wrap, main {
+      width: 90%; } }
 
 header {
   width: 100%;
