--- a/style.css
+++ b/style.css
@@ -441,6 +441,9 @@ h1 {
     color: #5A6468;
     font-weight: 800;
     letter-spacing: -0.06em; }
+  @media (max-width: 1024px) {
+    h1 {
+      text-align: center; } }
 
 .wrap, main {
   margin: 0 auto;
@@ -492,6 +495,10 @@ header {
   width: 494px;
   height: 596px;
   background: url("images/c4b-sprite.png") 0 -354px no-repeat; }
+  @media (max-width: 1024px) {
+    #girl-img {
+      top: -20px;
+      left: -100px; } }
 
 #main-content-wrap {
   margin-bottom: 50px;
