--- a/style.css
+++ b/style.css
@@ -487,17 +487,28 @@ header {
   width: 684px;
   height: 354px;
   background: url("images/c4b-sprite.png") top left no-repeat; }
+  @media (max-width: 1024px) {
+    #bacon-img {
+      top: 40px;
+      right: -180px; } }
+  @media (max-width: 860px) {
+    #bacon-img {
+      right: -320px; } }
+  @media (max-width: 600px) {
+    #bacon-img {
+      right: -440px; } }
 
 #girl-img {
   position: absolute;
   top: -172px;
   left: -65px;
   width: 494px;
-  height: 596px;
+  height: 0;
+  padding-bottom: 596px;
   background: url("images/c4b-sprite.png") 0 -354px no-repeat; }
   @media (max-width: 1024px) {
     #girl-img {
-      top: -20px;
+      top: -40px;
       left: -100px; } }
 
 #main-content-wrap {
