--- a/sass/style.scss
+++ b/sass/style.scss
@@ -245,6 +245,28 @@ main {
 		letter-spacing: -1px;
 	}
 
+	@include breakpoint( sm ) {
+		padding: 15px;
+
+		h2 {
+			margin-bottom: 10px;
+			font-size: 68px;
+			line-height: 68px;
+		}
+
+		h3 {
+			margin-bottom: 15px;
+			font-size: 42px;
+			line-height: 40px;
+		}
+
+		h4 {
+			font-size: 26px;
+			line-height: 28px;
+		}
+
+	} // BP: sm
+
 } // main
 
 
