--- a/style.css
+++ b/style.css
@@ -565,6 +565,20 @@ main {
     font-size: 30px;
     line-height: 42px;
     letter-spacing: -1px; }
+  @media (max-width: 860px) {
+    main {
+      padding: 15px; }
+      main h2 {
+        margin-bottom: 10px;
+        font-size: 68px;
+        line-height: 68px; }
+      main h3 {
+        margin-bottom: 15px;
+        font-size: 42px;
+        line-height: 40px; }
+      main h4 {
+        font-size: 26px;
+        line-height: 28px; } }
 
 #questions {
   margin: 12px 15px;
