--- a/style.css
+++ b/style.css
@@ -455,7 +455,7 @@ h1 {
         display: block;
         margin-top: 20px;
         line-height: 75px; } }
-  @media (max-width: 600px) {
+  @media (max-width: 740px) {
     h1 {
       font-size: 46px; }
       h1 span {
@@ -582,6 +582,15 @@ main {
       main h4 {
         font-size: 26px;
         line-height: 28px; } }
+  @media (max-width: 740px) {
+    main h2 {
+      margin-bottom: 16px;
+      font-size: 54px;
+      line-height: 54px; }
+    main h3 {
+      margin-bottom: 16px;
+      font-size: 36px;
+      line-height: 34px; } }
 
 #questions {
   margin: 12px 15px;
@@ -601,6 +610,9 @@ main {
     clear: both;
     content: " ";
     display: table; }
+  @media (max-width: 740px) {
+    #questions {
+      margin: 20px 15px; } }
   #questions li {
     float: left;
     margin: 0 11px;
